toolchain/internal/core/analysis/testdata/errors/consts/typed_unknown_type.vdl
// @expect: E201

const value UnknownType = 10
